--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
+    "push": "vite build && firebase deploy",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "chalk": "^5.4.1",
     "classnames": "^2.5.1",
+    "firebase-cli": "^1.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
